# evm-snippet

./: .editorconfig  .prettierignore  package-lock.json  package.json
src/: App.css  App.tsx  atoms.ts  index.tsx  lang.ts  util.ts
src-tauri/: Cargo.toml  rust-toolchain  tauri.conf.json
src-tauri/src/: error.rs  helper.rs  lang.rs  main.rs
src/components/: address.tsx  addressDialog.tsx  addresses.tsx  autoDismissAlert.tsx  console.tsx  copyButton.tsx  editor.tsx  panel.tsx
